<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
   <group android:id="@+id/menugroup1">
       <item
           android:id="@+id/menu1"
           android:icon="@drawable/haldun"
           android:title="@string/popup_menu_1"/>
       <item
           android:id="@+id/menu2"
           android:title="@string/popup_menu_2"/>
       <item
           android:id="@+id/menu3"
           android:title="@string/popup_menu_3">
           <menu>
               <item
                   android:title="@string/sub_menu_1"
                   android:id="@+id/submenu1"/>
           </menu>
       </item>
   </group>
   <group android:id="@+id/menugroup2">
       <item
           android:id="@+id/menu4"
           android:title="@string/popup_menu_4"
           android:checkable="true"
           android:checked="true"
           android:icon="@drawable/haldun"/>
       <item
           android:id="@+id/menu5"
           android:title="@string/popup_menu_5"
           android:enabled="false"/>
       <item
           android:id="@+id/menu6"
           android:title="@string/popup_menu_6"/>
   </group>
</menu>